--- a/dynamic-embedded/package.json
+++ b/dynamic-embedded/package.json
@@ -8,7 +8,8 @@
     "deploy": "vercel"
   },
   "dependencies": {
-    "@dynamic-labs/sdk-api": "^0.0.394",
+    "@dynamic-labs/sdk-api": "^0.0.395",
+    "dotenv": "^16.4.5",
     "frog": "latest",
     "hono": "^4"
   },
